# CuPP

./: CMakeLists.txt
examples/memory1d/: CMakeLists.txt
include/cupp/: device.h  device_ptr.h  host_ptr.h  kernel_call_traits.h  runtime.h  vector.h
test/: CMakeLists.txt  device_tests.cpp  shared_device_pointer_tests.cpp  unit_tests.cpp
